@@ -6,6 +6,8 @@ Next release
 
  Add ``registerContentFactory`` API to testing module.
 
+ ADd ``registerListItem`` API to testing module.
+
 0.7.3 (2008/12/28)
 
  Disuse the ``IContentType`` IInterface.  This feature requires
